# Zero_shot_learning_for_human_robot_interaction

./: EnvManager.h  README.md  TeacherPolicy.py  action_filter.py  main.py
core/: BVH.cpp  BVH.h  BodyForce.cpp  BodyForce.h  CMakeLists.txt  CMakeLists.txt.bak  COMReward.cpp  COMReward.h  COPReward.cpp  COPReward.h  Character.cpp  Character.h  DARTHelper.cpp  DARTHelper.h  Environment.cpp  Environment.h  Fixedeque.h  Force.cpp  Force.h  LinearBushing.cpp  LinearBushing.h  Muscle.cpp  Reward.cpp  Reward.h  SpringForce.cpp  SpringForce.h  torqueReward.cpp  torqueReward.h  utils.h
python/: Model.py  StudentPolicy.py  train_student.py  train_teacher.py
render_student/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
render_teacher/: CMakeLists.txt  Window.cpp  matplotlibcpp.h
